--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -23896,6 +23896,77 @@ references:
   commentId: N:WarcraftLegacies.Source.Quests.Naga
   fullName: WarcraftLegacies.Source.Quests.Naga
   nameWithType: WarcraftLegacies.Source.Quests.Naga
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb
+  name: QuestAetheneumTomb
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.html
+  commentId: T:WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb
+  nameWithType: QuestAetheneumTomb
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.#ctor(Rectangle)
+  name: QuestAetheneumTomb(Rectangle)
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.html#WarcraftLegacies_Source_Quests_Naga_QuestAetheneumTomb__ctor_Rectangle_
+  commentId: M:WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.#ctor(Rectangle)
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.QuestAetheneumTomb(Rectangle)
+  nameWithType: QuestAetheneumTomb.QuestAetheneumTomb(Rectangle)
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.#ctor*
+  name: QuestAetheneumTomb
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.html#WarcraftLegacies_Source_Quests_Naga_QuestAetheneumTomb__ctor_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.#ctor
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.QuestAetheneumTomb
+  nameWithType: QuestAetheneumTomb.QuestAetheneumTomb
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.CompletionPopup
+  name: CompletionPopup
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.html#WarcraftLegacies_Source_Quests_Naga_QuestAetheneumTomb_CompletionPopup
+  commentId: P:WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.CompletionPopup
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.CompletionPopup
+  nameWithType: QuestAetheneumTomb.CompletionPopup
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.CompletionPopup*
+  name: CompletionPopup
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.html#WarcraftLegacies_Source_Quests_Naga_QuestAetheneumTomb_CompletionPopup_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.CompletionPopup
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.CompletionPopup
+  nameWithType: QuestAetheneumTomb.CompletionPopup
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.OnComplete(MacroTools.FactionSystem.Faction)
+  name: OnComplete(Faction)
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.html#WarcraftLegacies_Source_Quests_Naga_QuestAetheneumTomb_OnComplete_MacroTools_FactionSystem_Faction_
+  commentId: M:WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.OnComplete(MacroTools.FactionSystem.Faction)
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.OnComplete(MacroTools.FactionSystem.Faction)
+  nameWithType: QuestAetheneumTomb.OnComplete(Faction)
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.OnComplete*
+  name: OnComplete
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.html#WarcraftLegacies_Source_Quests_Naga_QuestAetheneumTomb_OnComplete_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.OnComplete
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.OnComplete
+  nameWithType: QuestAetheneumTomb.OnComplete
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.OnFail(MacroTools.FactionSystem.Faction)
+  name: OnFail(Faction)
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.html#WarcraftLegacies_Source_Quests_Naga_QuestAetheneumTomb_OnFail_MacroTools_FactionSystem_Faction_
+  commentId: M:WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.OnFail(MacroTools.FactionSystem.Faction)
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.OnFail(MacroTools.FactionSystem.Faction)
+  nameWithType: QuestAetheneumTomb.OnFail(Faction)
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.OnFail*
+  name: OnFail
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.html#WarcraftLegacies_Source_Quests_Naga_QuestAetheneumTomb_OnFail_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.OnFail
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.OnFail
+  nameWithType: QuestAetheneumTomb.OnFail
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.RewardDescription
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.html#WarcraftLegacies_Source_Quests_Naga_QuestAetheneumTomb_RewardDescription
+  commentId: P:WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.RewardDescription
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.RewardDescription
+  nameWithType: QuestAetheneumTomb.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.RewardDescription*
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.html#WarcraftLegacies_Source_Quests_Naga_QuestAetheneumTomb_RewardDescription_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.RewardDescription
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Naga.QuestAetheneumTomb.RewardDescription
+  nameWithType: QuestAetheneumTomb.RewardDescription
 - uid: WarcraftLegacies.Source.Quests.Naga.QuestBlackTemple
   name: QuestBlackTemple
   href: api-source/WarcraftLegacies.Source.Quests.Naga.QuestBlackTemple.html
@@ -33758,71 +33829,6 @@ references:
   commentId: T:WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup
   fullName: WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup
   nameWithType: NagaQuestSetup
-- uid: WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.CONQUER_BLACK_TEMPLE
-  name: CONQUER_BLACK_TEMPLE
-  href: api-source/WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.html#WarcraftLegacies_Source_Setup_QuestSetup_NagaQuestSetup_CONQUER_BLACK_TEMPLE
-  commentId: P:WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.CONQUER_BLACK_TEMPLE
-  fullName: WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.CONQUER_BLACK_TEMPLE
-  nameWithType: NagaQuestSetup.CONQUER_BLACK_TEMPLE
-- uid: WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.CONQUER_BLACK_TEMPLE*
-  name: CONQUER_BLACK_TEMPLE
-  href: api-source/WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.html#WarcraftLegacies_Source_Setup_QuestSetup_NagaQuestSetup_CONQUER_BLACK_TEMPLE_
-  commentId: Overload:WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.CONQUER_BLACK_TEMPLE
-  isSpec: "True"
-  fullName: WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.CONQUER_BLACK_TEMPLE
-  nameWithType: NagaQuestSetup.CONQUER_BLACK_TEMPLE
-- uid: WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.EXILE_PATH
-  name: EXILE_PATH
-  href: api-source/WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.html#WarcraftLegacies_Source_Setup_QuestSetup_NagaQuestSetup_EXILE_PATH
-  commentId: P:WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.EXILE_PATH
-  fullName: WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.EXILE_PATH
-  nameWithType: NagaQuestSetup.EXILE_PATH
-- uid: WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.EXILE_PATH*
-  name: EXILE_PATH
-  href: api-source/WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.html#WarcraftLegacies_Source_Setup_QuestSetup_NagaQuestSetup_EXILE_PATH_
-  commentId: Overload:WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.EXILE_PATH
-  isSpec: "True"
-  fullName: WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.EXILE_PATH
-  nameWithType: NagaQuestSetup.EXILE_PATH
-- uid: WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.KILL_FROZEN_THRONE
-  name: KILL_FROZEN_THRONE
-  href: api-source/WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.html#WarcraftLegacies_Source_Setup_QuestSetup_NagaQuestSetup_KILL_FROZEN_THRONE
-  commentId: P:WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.KILL_FROZEN_THRONE
-  fullName: WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.KILL_FROZEN_THRONE
-  nameWithType: NagaQuestSetup.KILL_FROZEN_THRONE
-- uid: WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.KILL_FROZEN_THRONE*
-  name: KILL_FROZEN_THRONE
-  href: api-source/WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.html#WarcraftLegacies_Source_Setup_QuestSetup_NagaQuestSetup_KILL_FROZEN_THRONE_
-  commentId: Overload:WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.KILL_FROZEN_THRONE
-  isSpec: "True"
-  fullName: WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.KILL_FROZEN_THRONE
-  nameWithType: NagaQuestSetup.KILL_FROZEN_THRONE
-- uid: WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.MADNESS_PATH
-  name: MADNESS_PATH
-  href: api-source/WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.html#WarcraftLegacies_Source_Setup_QuestSetup_NagaQuestSetup_MADNESS_PATH
-  commentId: P:WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.MADNESS_PATH
-  fullName: WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.MADNESS_PATH
-  nameWithType: NagaQuestSetup.MADNESS_PATH
-- uid: WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.MADNESS_PATH*
-  name: MADNESS_PATH
-  href: api-source/WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.html#WarcraftLegacies_Source_Setup_QuestSetup_NagaQuestSetup_MADNESS_PATH_
-  commentId: Overload:WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.MADNESS_PATH
-  isSpec: "True"
-  fullName: WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.MADNESS_PATH
-  nameWithType: NagaQuestSetup.MADNESS_PATH
-- uid: WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.REDEMPTION_PATH
-  name: REDEMPTION_PATH
-  href: api-source/WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.html#WarcraftLegacies_Source_Setup_QuestSetup_NagaQuestSetup_REDEMPTION_PATH
-  commentId: P:WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.REDEMPTION_PATH
-  fullName: WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.REDEMPTION_PATH
-  nameWithType: NagaQuestSetup.REDEMPTION_PATH
-- uid: WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.REDEMPTION_PATH*
-  name: REDEMPTION_PATH
-  href: api-source/WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.html#WarcraftLegacies_Source_Setup_QuestSetup_NagaQuestSetup_REDEMPTION_PATH_
-  commentId: Overload:WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.REDEMPTION_PATH
-  isSpec: "True"
-  fullName: WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.REDEMPTION_PATH
-  nameWithType: NagaQuestSetup.REDEMPTION_PATH
 - uid: WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.Setup
   name: Setup()
   href: api-source/WarcraftLegacies.Source.Setup.QuestSetup.NagaQuestSetup.html#WarcraftLegacies_Source_Setup_QuestSetup_NagaQuestSetup_Setup
